Add Java 11 to build
Signed-off-by: Gábor Lipták <gliptak@gmail.com>